tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/key/hash.stderr
TOML parse error at line 1, column 2
  |
1 | a# = 1
  |  ^
expected `.`, `=`
